# fs-icons

./: CLAUDE.md  Cargo.toml  Containerfile  README.md  deny.toml  manifest.toml  package.toml
.github/workflows/: ci.yml
cursor-sets/midnight/: manifest.toml
sync/: Cargo.toml
sync/src/: main.rs
