[package]
name = "fsn-icons-sync"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Icons Sync — pulls latest icons from upstream sources"

[[bin]]
name = "fsn-icons-sync"
path = "src/main.rs"

[dependencies]
gix = { version = "0.70", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
